--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,6 @@ jobs:
     docker:
       - image: circleci/ruby:2.5.1
         environment:
-          TESTOPTS: '--ci-dir=/tmp/test-results'
           APP_ENV: test
     steps:
       - checkout
@@ -25,7 +24,23 @@ jobs:
       # Run minitest
       - type: shell
         command: bundle exec rake
-
-      # Save artifacts
-      - type: store_test_results
-        path: /tmp/test-results
+  deploy:
+    docker:
+      - image: circleci/ruby:2.5.1
+    steps:
+      - checkout
+      - run:
+          name: Deploy Master to Heroku
+          command: |
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
